[STREAMPIPES-121] Add data sink for Redis

--- a/streampipes-sinks-databases-jvm/pom.xml
+++ b/streampipes-sinks-databases-jvm/pom.xml
@@ -96,6 +96,10 @@
             <artifactId>ditto-client</artifactId>
             <version>${ditto-client.version}</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
 
         <!-- 3rd party dependencies to avoid convergence errors -->
         <dependency>
