--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <javax-validation.version>2.0.1.Final</javax-validation.version>
         <javax-websocket-client-api.version>1.1</javax-websocket-client-api.version>
         <jsrosbridge.version>0.2.0</jsrosbridge.version>
+        <jedis.version>3.3.0</jedis.version>
 
         <language-detector.version>0.6</language-detector.version>
         <log4j-to-slf4j.version>2.8.2</log4j-to-slf4j.version>
@@ -553,8 +554,11 @@
                 <artifactId>hawtbuf</artifactId>
                 <version>${hawtbuf.version}</version>
             </dependency>
-
-
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
 
 
             <!-- Test dependencies -->
