[STREAMPIPES-133] Add CodeInputStaticProperty

--- a/ui/package.json
+++ b/ui/package.json
@@ -67,6 +67,7 @@
     "angularjs-datetime-picker": "0.1.16",
     "bootstrap": "3.3.4",
     "calendar-heatmap-graph": "0.0.14",
+    "codemirror": "5.53.2",
     "core-js": "2.5.3",
     "dagre": "0.8.4",
     "fast-json-patch": "2.1.0",
@@ -75,6 +76,7 @@
     "jquery-ui-dist": "1.12.1",
     "jquery.panzoom": "2.0.5",
     "datatables.net": "1.10.20",
+    "jshint": "2.11.1",
     "jsonld": "0.4.12",
     "jsplumb": "2.1.3",
     "jszip": "3.2.1",
