--- a/cli/services/connect-master/docker-compose.yml
+++ b/cli/services/connect-master/docker-compose.yml
@@ -29,6 +29,11 @@ services:
       - connect:/data/
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
