--- a/cli/services/influxdb/docker-compose.yml
+++ b/cli/services/influxdb/docker-compose.yml
@@ -31,6 +31,11 @@ services:
       - influx:/var/lib/influxdb
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
