--- a/cli/services/kafka/docker-compose.yml
+++ b/cli/services/kafka/docker-compose.yml
@@ -38,6 +38,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
