--- a/cli/services/test-connect-datasources-rest/docker-compose.yml
+++ b/cli/services/test-connect-datasources-rest/docker-compose.yml
@@ -21,6 +21,11 @@ services:
       - "3001:3001"
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
