--- a/cli/services/app-container/docker-compose.yml
+++ b/cli/services/app-container/docker-compose.yml
@@ -22,7 +22,12 @@ services:
     volumes:
       - "../../apps:/usr/src/app/public/apps"
     extra_hosts:
-      - host.docker.internal:${HOST_DOCKER_INTERNAL}  
+      - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
