--- a/cli/services/elasticsearch/docker-compose.yml
+++ b/cli/services/elasticsearch/docker-compose.yml
@@ -33,6 +33,11 @@ services:
       - elastic:/usr/share/elasticsearch/data
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
