--- a/cli/services/grafana/docker-compose.yml
+++ b/cli/services/grafana/docker-compose.yml
@@ -23,6 +23,11 @@ services:
       - grafana:/var/lib/grafana
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
