--- a/cli/services/jobmanager/docker-compose.yml
+++ b/cli/services/jobmanager/docker-compose.yml
@@ -25,6 +25,11 @@ services:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
