--- a/cli/services/rabbitmq/docker-compose.yml
+++ b/cli/services/rabbitmq/docker-compose.yml
@@ -24,6 +24,11 @@ services:
       - ./services/rabbittmq/rabbitmq-isolated.conf:/etc/rabbitmq/rabbitmq.config
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
