--- a/cli/services/redis/docker-compose.yml
+++ b/cli/services/redis/docker-compose.yml
@@ -28,6 +28,11 @@ services:
     restart: always
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
