--- a/cli/services/zookeeper/docker-compose.yml
+++ b/cli/services/zookeeper/docker-compose.yml
@@ -24,6 +24,11 @@ services:
       - zk-data:/opt/zookeeper-3.4.13/data
     extra_hosts:
       - host.docker.internal:${HOST_DOCKER_INTERNAL}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1m"
+        max-file: "1"
     networks:
       spnet:
 
