--- a/ui/package.json
+++ b/ui/package.json
@@ -97,6 +97,7 @@
     "ngx-color-picker": "9.0.0",
     "plotly.js": "1.52.2",
     "prismjs": "1.16.0",
+    "roboto-fontface": "0.10.0",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
     "shepherd.js": "2.4.0",
