Add guava dependency to be used with time window scheduled service

--- a/pom.xml
+++ b/pom.xml
@@ -566,6 +566,11 @@
                 <artifactId>jedis</artifactId>
                 <version>${jedis.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
 
 
             <!-- Test dependencies -->
