--- a/streampipes-connect-adapters/pom.xml
+++ b/streampipes-connect-adapters/pom.xml
@@ -161,6 +161,11 @@
                 <scope>runtime</scope>
             </dependency>
             <dependency>
+            	<groupId>org.apache.plc4x</groupId>
+            	<artifactId>plc4j-driver-modbus</artifactId>
+            	<scope>runtime</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.pulsar</groupId>
                 <artifactId>pulsar-client</artifactId>
             </dependency>
