--- a/streampipes-serializers/pom.xml
+++ b/streampipes-serializers/pom.xml
@@ -44,6 +44,10 @@
             <groupId>io.fogsy</groupId>
             <artifactId>empire-pinto</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
 
