Rename date new explorer module

--- a/ui/deployment/dev/config.yml
+++ b/ui/deployment/dev/config.yml
@@ -22,7 +22,7 @@ modules:
   - spPipelines
   - spConnect
   - spDashboard
-  - spDataExplorer2
+  - spDataExplorer
   - spAppOverview
   - spAdd
   - spMyElements
