--- a/ui/angular.json
+++ b/ui/angular.json
@@ -36,12 +36,7 @@
               "node_modules/jquery.panzoom/dist/jquery.panzoom.js",
               "node_modules/jquery-ui-dist/jquery-ui.js",
               "node_modules/jsplumb/dist/js/jsPlumb-2.1.3-min.js",
-              "node_modules/trix/dist/trix.js",
-              "src/assets/three.min.js",
-              "src/assets/threex.domevents.js",
-              "src/assets/OrbitControls.js",
-              "src/assets/PackWidget.js",
-              "src/assets/render.js"
+              "node_modules/trix/dist/trix.js"
             ]
           },
           "configurations": {
