[STREAMPIPES-145] Migrate pipeline element documentation module

--- a/ui/package.json
+++ b/ui/package.json
@@ -46,7 +46,6 @@
     "angular-datatables": "0.6.2",
     "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
-    "angular-markdown-directive": "0.3.1",
     "angular-material": "1.1.18",
     "angular-material-icons": "0.4.0",
     "angular-messages": "1.7.7",
@@ -89,7 +88,7 @@
     "@danielmoncada/angular-datetime-picker": "9.2.0",
     "moment": "2.24.0",
     "ng-prettyjson": "0.1.8",
-    "ng-showdown": "1.1.0",
+    "ngx-showdown": "5.1.0",
     "ng-simple-slideshow": "1.2.9",
     "ng2-charts": "2.0.3",
     "ng2-dragula": "1.5.0",
@@ -101,6 +100,7 @@
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
     "shepherd.js": "2.4.0",
+    "showdown": "1.9.1",
     "slick-carousel": "1.6.0",
     "systemjs": "0.21.6",
     "tslib": "1.11.1",
@@ -120,6 +120,7 @@
     "@types/leaflet": "^1.5.9",
     "@types/node": "^12.11.1",
     "@types/rx": "^4.1.1",
+    "@types/showdown": "1.9.3",
     "codelyzer": "^5.1.2",
     "copy-webpack-plugin": "^5.0.2",
     "compression-webpack-plugin": "^3.0.0",
