Change java version in docker file

--- a/streampipes-processors-enricher-jvm/Dockerfile
+++ b/streampipes-processors-enricher-jvm/Dockerfile
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ARG BASE_IMAGE=adoptopenjdk/openjdk8-openj9:alpine-slim
+ARG BASE_IMAGE=adoptopenjdk/openjdk9-openj9:alpine-slim
 FROM $BASE_IMAGE
 
 ENV CONSUL_LOCATION consul
@@ -22,4 +22,4 @@ EXPOSE 8090
 
 COPY target/streampipes-processors-enricher-jvm.jar  /streampipes-processing-element-container.jar
 
-ENTRYPOINT ["java", "--add-modules", "jdk.scripting.nashorn", "-jar", "/streampipes-processing-element-container.jar"]
+ENTRYPOINT ["java", "-jar", "/streampipes-processing-element-container.jar"]
