[STREAMPIPES-145] Migrate text editor

--- a/ui/package.json
+++ b/ui/package.json
@@ -59,7 +59,6 @@
     "angular-slick-carousel": "3.1.7",
     "angular-touch": "1.7.7",
     "angular-tree-component": "8.5.6",
-    "angular-trix": "1.0.2",
     "angular-ui-bootstrap": "0.14.3",
     "angular-ui-sortable": "0.13.4",
     "angular-ui-tree": "2.9.0",
@@ -96,8 +95,10 @@
     "ngmap": "1.18.0",
     "ngx-auto-scroll": "^1.1.0",
     "ngx-color-picker": "9.0.0",
+    "ngx-quill": "12.0.1",
     "plotly.js": "1.52.2",
     "prismjs": "1.16.0",
+    "quill": "1.3.7",
     "roboto-fontface": "0.10.0",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
@@ -105,7 +106,6 @@
     "showdown": "1.9.1",
     "slick-carousel": "1.6.0",
     "systemjs": "0.21.6",
-    "trix": "0.10.1",
     "tslib": "1.11.1",
     "zone.js": "0.10.2"
   },
