--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "9.0.5",
     "@angular/upgrade": "9.0.5",
     "@asymmetrik/ngx-leaflet": "6.0.1",
+    "@ctrl/ngx-codemirror": "3.1.3",
     "@danielmoncada/angular-datetime-picker": "9.2.0",
     "@fortawesome/fontawesome-free": "5.12.1",
     "@ngui/datetime-picker": "0.16.2",
@@ -66,7 +67,7 @@
     "angularjs-datetime-picker": "0.1.16",
     "bootstrap": "3.3.4",
     "calendar-heatmap-graph": "0.0.14",
-    "codemirror": "5.53.2",
+    "codemirror": "5.55.0",
     "core-js": "2.5.3",
     "dagre": "0.8.4",
     "datatables.net": "1.10.20",
